# logseq-i18n-lint

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: analyzer.rs  e2e.rs  parser.rs
config/: default.toml
docs/: detection-rules.md  hardcoded-string-detection.md  unused-key-detection.md
src/: analyzer.rs  checker.rs  config.rs  edn.rs  git.rs  key_collector.rs  lib.rs  main.rs  parser.rs  reporter.rs  scanner.rs
tests/: integration.rs
tests/fixtures/analyzer/: allow_strings.cljs  conditional.cljs  fn_arg.cljs  fn_hiccup_return.cljs  format_string.cljs  hiccup_attr.cljs  hiccup_text.cljs  ignore_context.cljs  notification.cljs  str_concat.cljs
tests/fixtures/check_missing/dicts/: en.edn
tests/fixtures/check_missing/src/: app.cljs
tests/fixtures/checker/db-idents/: class.cljs  property.cljs
tests/fixtures/checker/dicts/: en.edn  es.edn
tests/fixtures/checker/src/: app.cljs
tests/fixtures/integration/: mixed_patterns.cljs
tests/fixtures/parser/: basic_sexp.cljs  comments.cljs  edge_cases.cljs  nested_deep.cljs  reader_macros.cljs  regex_literals.cljs  string_escape.cljs
