[package]
name = "logseq-i18n-lint"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "AST-level detection of hardcoded UI strings in Clojure/ClojureScript source code"
license = "MIT"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
toml = "1.1"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.5"
globset = "0.4"
rayon = "1.11"
colored = "3.1"
regex = "1.12"
unicode-width = "0.2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "analyzer"
harness = false

[[bench]]
name = "e2e"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
module_name_repetitions = "allow"
unnecessary_wraps = "allow"
